name:                pg-transact
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pg-transact#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.PostgreSQL.Transact
  build-depends:       base >= 4.7 && < 5
               , postgresql-simple
               , transformers
               , monad-control
               , exceptions
               , bytestring
  ghc-options: -Wall
  default-language:    Haskell2010

test-suite pg-transact-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pg-transact
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pg-transact
